# ingics-message-parser-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
example/scan-ibs03t-with-bluepy/: README.md  scan.py
igsparser/: __init__.py  advertisement.py  appearance.json  appearance.py  company-identifiers.json  company_identifiers.py  message_parser.py  msd.py  payload_parser.py
parser/: message_parser.py
tests/: context.py  test_generic.py  test_ibs01.py  test_ibs02.py  test_ibs03.py  test_ibs04.py  test_ibs05.py  test_ibs06.py  test_ibs07.py  test_ibs08.py  test_irs.py  test_iws01.py  test_others.py
